// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Simai Parser - Snapshots should match snapshot for SIMPLE_TAP: simple-tap 1`] = `
[
  {
    "data": {
      "bpm": 120,
      "division": 4,
    },
    "type": "timeSignature",
  },
  [
    {
      "data": {
        "lane": 1,
        "type": "tap",
      },
      "type": "note",
    },
  ],
  {
    "data": {
      "divisionCount": 1,
    },
    "type": "rest",
  },
]
`;

exports[`Simai Parser - Snapshots should match snapshot for SIMPLE_HOLD: simple-hold 1`] = `
[
  {
    "data": {
      "bpm": 120,
      "division": 4,
    },
    "type": "timeSignature",
  },
  [
    {
      "data": {
        "duration": {
          "bpm": undefined,
          "division": 4,
          "divisionCount": 1,
        },
        "lane": 1,
        "type": "hold",
      },
      "type": "note",
    },
  ],
  {
    "data": {
      "divisionCount": 1,
    },
    "type": "rest",
  },
]
`;

exports[`Simai Parser - Snapshots should match snapshot for SIMPLE_SLIDE: simple-slide 1`] = `
[
  {
    "data": {
      "bpm": 120,
      "division": 4,
    },
    "type": "timeSignature",
  },
  [
    {
      "data": {
        "destinationLane": 5,
        "direction": "ccw",
        "duration": {
          "bpm": undefined,
          "division": 4,
          "divisionCount": 1,
        },
        "lane": 1,
        "slideType": "Straight",
        "starVisibility": "normal",
        "type": "slide",
      },
      "type": "note",
    },
  ],
  {
    "data": {
      "divisionCount": 1,
    },
    "type": "rest",
  },
]
`;

exports[`Simai Parser - Snapshots should match snapshot for EACH_TAP: each-tap 1`] = `
[
  {
    "data": {
      "bpm": 120,
      "division": 4,
    },
    "type": "timeSignature",
  },
  [
    {
      "data": {
        "lane": 1,
        "type": "tap",
      },
      "type": "note",
    },
    {
      "data": {
        "lane": 5,
        "type": "tap",
      },
      "type": "note",
    },
  ],
  {
    "data": {
      "divisionCount": 1,
    },
    "type": "rest",
  },
]
`;

exports[`Simai Parser - Snapshots should match snapshot for COMPLEX_CHART: complex-chart 1`] = `
[
  {
    "data": {
      "bpm": 120,
      "division": 4,
    },
    "type": "timeSignature",
  },
  [
    {
      "data": {
        "lane": 1,
        "type": "tap",
      },
      "type": "note",
    },
  ],
  [
    {
      "data": {
        "duration": {
          "bpm": undefined,
          "division": 4,
          "divisionCount": 2,
        },
        "lane": 2,
        "type": "hold",
      },
      "type": "note",
    },
  ],
  {
    "data": {
      "divisionCount": 1,
    },
    "type": "rest",
  },
  [
    {
      "data": {
        "destinationLane": 7,
        "direction": "ccw",
        "duration": {
          "bpm": undefined,
          "division": 4,
          "divisionCount": 1,
        },
        "lane": 3,
        "slideType": "Straight",
        "starVisibility": "normal",
        "type": "slide",
      },
      "type": "note",
    },
  ],
  [
    {
      "data": {
        "destinationLane": 6,
        "direction": "cw",
        "duration": {
          "bpm": undefined,
          "division": 4,
          "divisionCount": 1,
        },
        "lane": 4,
        "slideType": "Circle",
        "starVisibility": "normal",
        "type": "slide",
      },
      "type": "note",
    },
  ],
  {
    "data": {
      "divisionCount": 1,
    },
    "type": "rest",
  },
]
`;

exports[`Simai Parser - Snapshots should match snapshot for FULL_CHART_EXAMPLE: full-chart-example 1`] = `
[
  {
    "data": {
      "bpm": 120,
      "division": 4,
    },
    "type": "timeSignature",
  },
  [
    {
      "data": {
        "lane": 1,
        "type": "tap",
      },
      "type": "note",
    },
  ],
  [
    {
      "data": {
        "lane": 2,
        "type": "tap",
      },
      "type": "note",
    },
  ],
  [
    {
      "data": {
        "lane": 3,
        "type": "tap",
      },
      "type": "note",
    },
  ],
  [
    {
      "data": {
        "lane": 4,
        "type": "tap",
      },
      "type": "note",
    },
  ],
  [
    {
      "data": {
        "duration": {
          "bpm": undefined,
          "division": 4,
          "divisionCount": 2,
        },
        "lane": 1,
        "type": "hold",
      },
      "type": "note",
    },
  ],
  [
    {
      "data": {
        "duration": {
          "bpm": undefined,
          "division": 4,
          "divisionCount": 2,
        },
        "lane": 2,
        "type": "hold",
      },
      "type": "note",
    },
  ],
  {
    "data": {
      "divisionCount": 1,
    },
    "type": "rest",
  },
  {
    "data": {
      "divisionCount": 1,
    },
    "type": "rest",
  },
  [
    {
      "data": {
        "destinationLane": 5,
        "direction": "ccw",
        "duration": {
          "bpm": undefined,
          "division": 4,
          "divisionCount": 1,
        },
        "lane": 1,
        "slideType": "Straight",
        "starVisibility": "normal",
        "type": "slide",
      },
      "type": "note",
    },
  ],
  [
    {
      "data": {
        "destinationLane": 6,
        "direction": "ccw",
        "duration": {
          "bpm": undefined,
          "division": 4,
          "divisionCount": 1,
        },
        "lane": 2,
        "slideType": "Straight",
        "starVisibility": "normal",
        "type": "slide",
      },
      "type": "note",
    },
  ],
  [
    {
      "data": {
        "destinationLane": 3,
        "direction": "cw",
        "duration": {
          "bpm": undefined,
          "division": 4,
          "divisionCount": 1,
        },
        "lane": 1,
        "slideType": "Circle",
        "starVisibility": "normal",
        "type": "slide",
      },
      "type": "note",
    },
  ],
  [
    {
      "data": {
        "destinationLane": 8,
        "direction": "ccw",
        "duration": {
          "bpm": undefined,
          "division": 4,
          "divisionCount": 1,
        },
        "lane": 2,
        "slideType": "Circle",
        "starVisibility": "normal",
        "type": "slide",
      },
      "type": "note",
    },
  ],
  {
    "data": {
      "divisionCount": 1,
    },
    "type": "rest",
  },
]
`;

exports[`Simai Parser - Snapshots should match snapshot for CIRCLE_SLIDE_CW: circle-slide-cw 1`] = `
[
  {
    "data": {
      "bpm": 120,
      "division": 4,
    },
    "type": "timeSignature",
  },
  [
    {
      "data": {
        "destinationLane": 3,
        "direction": "cw",
        "duration": {
          "bpm": undefined,
          "division": 4,
          "divisionCount": 1,
        },
        "lane": 1,
        "slideType": "Circle",
        "starVisibility": "normal",
        "type": "slide",
      },
      "type": "note",
    },
  ],
  {
    "data": {
      "divisionCount": 1,
    },
    "type": "rest",
  },
]
`;

exports[`Simai Parser - Snapshots should match snapshot for SAME_ORIGIN_SLIDES: same-origin-slides 1`] = `
[
  {
    "data": {
      "bpm": 120,
      "division": 4,
    },
    "type": "timeSignature",
  },
  [
    {
      "data": {
        "destinationLane": 5,
        "direction": "ccw",
        "duration": {
          "bpm": undefined,
          "division": 4,
          "divisionCount": 1,
        },
        "lane": 1,
        "slideType": "Straight",
        "starVisibility": "normal",
        "type": "slide",
      },
      "type": "note",
    },
  ],
  {
    "data": {
      "divisionCount": 1,
    },
    "type": "rest",
  },
]
`;

exports[`Simai Parser - Snapshots should match snapshot for ALL_SLIDE_TYPES: all-slide-types 1`] = `
[
  {
    "data": {
      "bpm": 120,
      "division": 4,
    },
    "type": "timeSignature",
  },
  [
    {
      "data": {
        "destinationLane": 2,
        "direction": "ccw",
        "duration": {
          "bpm": undefined,
          "division": 4,
          "divisionCount": 1,
        },
        "lane": 1,
        "slideType": "Straight",
        "starVisibility": "normal",
        "type": "slide",
      },
      "type": "note",
    },
  ],
  [
    {
      "data": {
        "destinationLane": 4,
        "direction": "cw",
        "duration": {
          "bpm": undefined,
          "division": 4,
          "divisionCount": 1,
        },
        "lane": 3,
        "slideType": "Circle",
        "starVisibility": "normal",
        "type": "slide",
      },
      "type": "note",
    },
  ],
  [
    {
      "data": {
        "destinationLane": 6,
        "direction": "ccw",
        "duration": {
          "bpm": undefined,
          "division": 4,
          "divisionCount": 1,
        },
        "lane": 5,
        "slideType": "Circle",
        "starVisibility": "normal",
        "type": "slide",
      },
      "type": "note",
    },
  ],
  [
    {
      "data": {
        "destinationLane": 1,
        "direction": "cw",
        "duration": {
          "bpm": undefined,
          "division": 4,
          "divisionCount": 1,
        },
        "lane": 7,
        "slideType": "U",
        "starVisibility": "normal",
        "type": "slide",
      },
      "type": "note",
    },
  ],
  [
    {
      "data": {
        "destinationLane": 3,
        "direction": "ccw",
        "duration": {
          "bpm": undefined,
          "division": 4,
          "divisionCount": 1,
        },
        "lane": 2,
        "slideType": "U",
        "starVisibility": "normal",
        "type": "slide",
      },
      "type": "note",
    },
  ],
  [
    {
      "data": {
        "destinationLane": 5,
        "direction": "cw",
        "duration": {
          "bpm": undefined,
          "division": 4,
          "divisionCount": 1,
        },
        "lane": 4,
        "slideType": "CUP",
        "starVisibility": "normal",
        "type": "slide",
      },
      "type": "note",
    },
  ],
  [
    {
      "data": {
        "destinationLane": 7,
        "direction": "ccw",
        "duration": {
          "bpm": undefined,
          "division": 4,
          "divisionCount": 1,
        },
        "lane": 6,
        "slideType": "CUP",
        "starVisibility": "normal",
        "type": "slide",
      },
      "type": "note",
    },
  ],
  [
    {
      "data": {
        "destinationLane": 1,
        "direction": "cw",
        "duration": {
          "bpm": undefined,
          "division": 4,
          "divisionCount": 1,
        },
        "lane": 8,
        "slideType": "Thunder",
        "starVisibility": "normal",
        "type": "slide",
      },
      "type": "note",
    },
  ],
  [
    {
      "data": {
        "destinationLane": 3,
        "direction": "ccw",
        "duration": {
          "bpm": undefined,
          "division": 4,
          "divisionCount": 1,
        },
        "lane": 2,
        "slideType": "Thunder",
        "starVisibility": "normal",
        "type": "slide",
      },
      "type": "note",
    },
  ],
  [
    {
      "data": {
        "destinationLane": 6,
        "direction": "ccw",
        "duration": {
          "bpm": undefined,
          "division": 4,
          "divisionCount": 1,
        },
        "lane": 4,
        "slideType": "V",
        "starVisibility": "normal",
        "type": "slide",
      },
      "type": "note",
    },
  ],
  [
    {
      "data": {
        "destinationLane": 5,
        "direction": "ccw",
        "duration": {
          "bpm": undefined,
          "division": 4,
          "divisionCount": 1,
        },
        "lane": 5,
        "slideType": "L",
        "starVisibility": "normal",
        "type": "slide",
      },
      "type": "note",
    },
  ],
  [
    {
      "data": {
        "destinationLane": 1,
        "direction": "cw",
        "duration": {
          "bpm": undefined,
          "division": 4,
          "divisionCount": 1,
        },
        "lane": 7,
        "slideType": "Circle",
        "starVisibility": "normal",
        "type": "slide",
      },
      "type": "note",
    },
  ],
  {
    "data": {
      "divisionCount": 1,
    },
    "type": "rest",
  },
]
`;

exports[`Simai Parser - Snapshots should match snapshot for ALL_TAP_VARIANTS: all-tap-variants 1`] = `
[
  {
    "data": {
      "bpm": 120,
      "division": 4,
    },
    "type": "timeSignature",
  },
  [
    {
      "data": {
        "lane": 1,
        "type": "tap",
      },
      "type": "note",
    },
  ],
  [
    {
      "data": {
        "lane": 2,
        "type": "tap",
      },
      "type": "note",
    },
  ],
  [
    {
      "data": {
        "lane": 3,
        "type": "tap",
      },
      "type": "note",
    },
  ],
  [
    {
      "data": {
        "lane": 4,
        "type": "tap",
      },
      "type": "note",
    },
  ],
  [
    {
      "data": {
        "lane": 5,
        "type": "tap",
      },
      "type": "note",
    },
  ],
  [
    {
      "data": {
        "duration": {
          "bpm": undefined,
          "division": 4,
          "divisionCount": 1,
        },
        "lane": 6,
        "type": "hold",
      },
      "type": "note",
    },
  ],
  [
    {
      "data": {
        "duration": {
          "bpm": undefined,
          "division": 4,
          "divisionCount": 1,
        },
        "lane": 7,
        "type": "hold",
      },
      "type": "note",
    },
  ],
  [
    {
      "data": {
        "duration": {
          "bpm": undefined,
          "division": 4,
          "divisionCount": 1,
        },
        "lane": 8,
        "type": "hold",
      },
      "type": "note",
    },
  ],
  {
    "data": {
      "divisionCount": 1,
    },
    "type": "rest",
  },
]
`;
